<resources>
    <string name="app_name">TimeSpoon</string>
    <string name="title_1">홈</string>
    <string name="title_2">캘린더</string>
    <string name="title_3">설정</string>
    <string name="current_date">2018년 8월 15일</string>
    <string name="current_time">2019년 3월 27일 22시 30분</string>

    <string name="home_detail_element1">현재 일정 종료</string>
    <string name="home_detail_element2">다음 일정까지</string>
    <string name="home_detail_element3">다음 할 일까지</string>
    <string name="home_detail_element4">할 일 총 필요시간</string>
    <string name="home_detail_value">0h 0m</string>

    <string name="top_bar_detail">다음 일정까지 남은 시간 : 2h\n다음 할 일까지 남은 시간 : 32h\n할 일들 총 필요시간 : 35h</string>

    <string name="string_static">오늘 일정</string>
    <string name="string_dynamic">할 일</string>
    <string name="string_no_data_static">\t\t\t\t오늘은 일정이 없습니다 :)</string>
    <string name="string_no_data_dynamic">\t\t\t\t할 일이 없습니다 :)\n\n\t\t\t\t아래 + 버튼을 통해 할 일을 추가해주세요!</string>
    <string name="string_no_data_calendar_static">\t\t\t\t일정이 없습니다 :)</string>
    <string name="string_no_data_calendar_dynamic">\t\t\t\t할 일이 없습니다 :)</string>


    <string name="string_add_item_static">일정</string>
    <string name="string_add_item_dynamic">할 일</string>

    <string name="bt_submit">완료</string>
    <string name="bt_cancel">취소</string>

    <string name="bt_scheduling_complete">이대로\n진행합시다!</string>
    <string name="bt_scheduling_cancel">맘에\n안들어요..</string>

    <!-- REPEAT -->
    <string name="repeat_mode_1">안 함</string>
    <string name="repeat_mode_2">매일</string>
    <string name="repeat_mode_3">매주</string>
    <string name="repeat_mode_4">매월</string>
    <string name="repeat_mode_5">매년</string>

    <!-- CATEGORY -->
    <string name="category_mode_1">기본</string>
    <string name="category_mode_2">약속</string>
    <string name="category_mode_3">공부</string>
    <string name="category_mode_4">활동</string>
    <string name="category_mode_5">기타</string>

    <!-- SCHEDULING -->
    <string name="scheduling_mode_1">MODE1</string>
    <string name="scheduling_mode_2">MODE2</string>
    <string name="scheduling_mode_3">MODE3</string>
    <string name="scheduling_mode_4">MODE4</string>
    <string name="scheduling_mode_5">MODE5</string>

    <string name="scheduling_mode_1_explain">MODE 1은\n스케줄을 남은 날짜를 고려하여 고르게 배치합니다.\n일을 날짜에 나눠 고르게 마치고 싶은 분들께 추천드립니다!</string>
    <string name="scheduling_mode_2_explain">MODE 2는\n스케줄을 남은 날짜 중 앞부분의 시간에 배치합니다.\n미리미리 일을 끝내고 싶은 분들께 추천드립니다!</string>
    <string name="scheduling_mode_3_explain">MODE 3는\n준비중입니다.\n유저분들의 피드백을 항상 기다립니다!</string>

    <string name="scheduling_selected_nothing">스케줄링을 진행할 할 일을 선택해주세요!</string>

    <!-- SETTING -->
    <string name="setting_name">홍길동</string>
    <string name="setting">설정</string>
    <string name="setting_profile">내 프로필 보기</string>
    <string name="setting_profile2">로그인이 필요합니다.</string>

    <string name="setting_category">카테고리 설정</string>
    <string name="setting_sleep_time">수면시간 설정</string>
    <string name="setting_app_info">어플리케이션 정보</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_scheduling_mode">스케줄링 모드 설정</string>

    <!-- SIGN IN -->
    <string name="sign_in_id">이메일</string>
    <string name="sign_in_password">비밀번호</string>

    <string name="sign_in_sign_up">아직 계정이 없으신가요?</string>
    <string name="sign_in_sign_up_button">회원가입</string>
    <string name="sign_in_forgot_password">비밀번호를 잊어버리셨나요?</string>
    <string name="sign_in_forgot_password_button">비밀번호 찾기</string>
    <string name="sign_in_or">OR</string>

    <!-- ERROR -->
    <string name="error_network">네트워크 상태를 확인해주세요.</string>

    <!-- 로그인  -->
    <string name="error_sign_in">아이디 혹은 비밀번호를 확인해주세요.</string>
    <string name="error_format_sign_in">이메일 형태의 계정을 입력해주세요.</string>
    <string name="error_wrong_email">등록되지 않은 이메일입니다.</string>

    <string name="sign_in_success">로그인 되었습니다.</string>

    <!-- 회원가입 -->
    <string name="error_sign_up">회원가입 오류</string>
    <string name="error_duplicate">계정이 이미 존재하는 이메일입니다.</string>
    <string name="error_format_sign_up">이메일 형식으로 등록해주세요.</string>
    <string name="error_weak_pw">비밀번호는 6자 이상으로 입력해주세요.</string>



    <string name="sleep_time">수면시간 설정</string>
    <string name="sleep_time_start">잠드는 시간</string>
    <string name="sleep_time_end">일어나는 시간</string>
    <string name="sleep_time_explain">
        수면시간 설정은 스케줄링에 도움이 됩니다.\nDEFAULT값은 00:00시부터 06:00시 입니다.
    </string>

    <string name="scheduling_explain_1">스케줄링을 진행할 할 일들을 선택해주세요.</string>
    <string name="scheduling_explain_2">스케줄링은 할 일들의 필요시간에 맞춰\n언제 해야할 지를 일정에 추가하는 작업이며,\n수면시간과 현재 설정된 일정들을 제외한 시간에\n사용자의 타입에 따라 자동으로 배치됩니다.</string>
    <string name="scheduling_result">스케줄링한 결과가 다음과 같습니다.\n계속 진행하시겠습니까?</string>

    <string name="example_recycler_view_title">찬일이랑 밥먹기</string>
    <string name="example_recycler_view_subtitle">데드라인 : 2019년 3월 6일 15:00 (D-3)</string>
    <string name="example_recycler_view_time">18:00~20:00</string>
    <string name="example_recycler_view_scheduled_start">05월 15일 18:00</string>
    <string name="example_recycler_view_scheduled_end">05월 16일 01:00</string>


    <string name="example_name">팽진욱</string>
    <string name="example_email">paeng875@gmail.com</string>

    <string name="add_item_title">제목</string>
    <string name="add_item_loc">위치</string>
    <string name="add_item_memo">메모</string>
    <string name="add_item_add_mode">새로운 이벤트</string>
    <string name="add_item_edit_mode">이벤트</string>

    
    <!-- DESCRIPTION -->
    <string name="desc_button">Setting Button</string>
    <string name="desc_logo">Time Spoon Logo</string>
    <string name="desc_button_close">Close Button</string>




    <!-- from library -->
    <string name="label_custom_color">Custom colors</string>
    <string name="label_scheduling">스케쥴링</string>
    <string name="label_add_item">일정 추가</string>
    <string name="label_replace_action">Replace action</string>
    <string name="label_remove_action">Remove action</string>
    <string name="action_use_cases">Use cases</string>
    <string name="action_show_hide_fab">Show/hide FAB</string>
    <string name="action_show_snackbar">Show snackbar</string>
    <string name="action_add_action_item">Add action item</string>
    <string name="action_remove_action_item">Remove action item</string>
    <string name="expansion_mode">Expansion mode</string>
    <string name="top">Top</string>
    <string name="left">Left</string>
    <string name="bottom">Bottom</string>
    <string name="right">Right</string>
    <string name="rotation_angle">Rotation angle</string>
    <string name="zero_degrees">0 degrees</string>
    <string name="forty_five_degrees">45 degrees</string>
    <string name="ninety_degrees">90 degrees</string>
    <string name="one_hundred_eighty_degrees">180 degrees</string>
    <string name="main_fab_color">Main FAB color</string>
    <string name="orange">Orange</string>
    <string name="white">White</string>
    <string name="primary">Primary</string>
    <string name="purple">Purple</string>
    <string name="main_fab_color_open">Main FAB color open</string>
    <string name="main_fab_color_close">Main FAB color close</string>
    <string name="none">None</string>
    <string name="action_toggle_list">Toggle list</string>
    <string name="action_toggle_reverse_animation">Toggle reverse animation on close</string>


    <!-- firebase -->
    <string name="facebook_app_id">347236915890000</string>
    <string name="fb_login_protocol_scheme">fb347236915890000</string>

    <string name="button_sign_in">로그인</string>
    <string name="button_sign_out">로그아웃</string>

    <string name="button_sign_in_with_google">Google 계정으로 로그인</string>
    <string name="button_sign_in_with_facebook">Facebook 계정으로 로그인</string>

    <string name="button_edit">수정</string>
    <string name="button_add">등록</string>
    <string name="button_confirm">확인</string>
    <string name="button_delete_data">일정 삭제</string>

    <string name="top_bar_event_add">새로운 이벤트</string>
    <string name="top_bar_event_edit">이벤트</string>
    <string name="top_bar_event_category">카테고리</string>
    <string name="top_bar_event_repeat">반복</string>


</resources>
