<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="profile"
            type="com.pkteam.smartcalendar.view.SettingProfile"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:contentDescription="@string/desc_button_close"
            android:id="@+id/iv_finish"
            android:padding="10dp"
            android:layout_width="@dimen/height_top_bar"
            android:layout_height="@dimen/height_top_bar"
            android:src="@drawable/ic_close_black_24dp"
            android:onClick="@{profile::finishView}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />



        <ImageView
            android:contentDescription="@string/desc_logo"
            android:id="@+id/iv_time_spoon"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo_ts"
            app:layout_constraintTop_toBottomOf="@+id/iv_finish"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_name"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_time_spoon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_email"
            android:textSize="@dimen/text_size_subtitle"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />





        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_element"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/button_sign_out"
            android:textColor="@color/material_white_1000"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:background="@drawable/layout_rounded_button_accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{profile::signOut}"/>




    </android.support.constraint.ConstraintLayout>

</layout>