<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_parent"
    android:layout_marginStart = "20dp"
    android:layout_marginEnd = "20dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/layout_item_rounded"
    android:orientation="horizontal"

    >


    <RelativeLayout
        android:layout_width="15dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_marginStart="10dp">

        <ImageView
            android:id="@+id/item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_category_1_24dp"

            />


    </RelativeLayout>

    
    <TextView
        android:id="@+id/item_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/example_recycler_view_title"
        android:textColor="#000"
        android:gravity="center|start"
        android:textSize="@dimen/text_size"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/item_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_recycler_view_scheduled_start"
            android:layout_marginTop="10dp"
            android:gravity="end|top"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="~"
            android:gravity="center">

        </TextView>

        <TextView
            android:id="@+id/item_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_recycler_view_scheduled_end"
            android:layout_marginBottom="10dp"
            android:gravity="end|top"
            />

    </LinearLayout>





</LinearLayout>