<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="additem"
            type="com.pkteam.smartcalendar.view.AddItemActivityCategory"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/concealerNSV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- background 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_blank_behind_top_bar"
                android:background="@color/material_white_1000">

            </LinearLayout>

            <!-- Category Items -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/material_white_1000">

                <!--divider-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorLightGray" />

                <!-- 카테고리1 -->
                <LinearLayout
                    android:id="@+id/ll_category_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_element"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <!-- category item -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_category_1_24dp"

                            />

                        <TextView
                            android:id="@+id/tv_category_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center|end"
                            android:text="@string/category_mode_1"
                            android:textColor="#000000"
                            android:textSize="@dimen/text_size" />

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    </RelativeLayout>

                    <ImageView

                        android:id="@+id/iv_category_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        app:srcCompat="@drawable/ic_expand_more_primary_24dp" />


                </LinearLayout>

                <!--divider-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorLightGray" />

                <!-- 카테고리2 -->
                <LinearLayout
                    android:id="@+id/ll_category_2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_element"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <!-- category item -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_category_2_24dp"

                            />

                        <TextView
                            android:id="@+id/tv_category_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center|end"
                            android:text="@string/category_mode_2"
                            android:textColor="#000000"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/iv_category_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_expand_more_primary_24dp" />


                </LinearLayout>

                <!--divider-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorLightGray" />

                <!-- 카테고리3 -->
                <LinearLayout
                    android:id="@+id/ll_category_3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_element"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <!-- category item -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_category_3_24dp"

                            />

                        <TextView
                            android:id="@+id/tv_category_3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center|end"
                            android:text="@string/category_mode_3"
                            android:textColor="#000000"
                            android:textSize="@dimen/text_size" />

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/iv_category_3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_expand_more_primary_24dp" />


                </LinearLayout>

                <!--divider-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorLightGray" />

                <!-- 카테고리4 -->
                <LinearLayout
                    android:id="@+id/ll_category_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_element"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <!-- category item -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_category_4_24dp"

                            />

                        <TextView
                            android:id="@+id/tv_category_4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center|end"
                            android:text="@string/category_mode_4"
                            android:textColor="#000000"
                            android:textSize="@dimen/text_size" />

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/iv_category_4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_expand_more_primary_24dp" />

                </LinearLayout>

                <!--divider-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorLightGray" />

                <!-- 카테고리5 -->
                <LinearLayout
                    android:id="@+id/ll_category_5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_element"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <!-- category item -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            app:srcCompat="@drawable/ic_category_5_24dp"

                            />

                        <TextView
                            android:id="@+id/tv_category_5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center|end"
                            android:text="@string/category_mode_5"
                            android:textColor="#000000"
                            android:textSize="@dimen/text_size" />

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/iv_category_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|end"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_expand_more_primary_24dp" />


                </LinearLayout>

                <!--divider-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorLightGray" />


            </LinearLayout>

            <!-- background last -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/material_white_1000">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="카테고리의 종류는 설정 탭에서 설정할 수 있습니다."
                    android:gravity="center"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/textGray"
                    />

            </LinearLayout>


        </LinearLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/crdHeaderView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_top_bar"
            app:cardBackgroundColor="@color/material_white_1000"


            >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_white_1000">


                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"

                    android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:onClick="@{additem::finishView}"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />


                <TextView
                    android:id="@+id/tv_top_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/top_bar_event_category"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_subtitle"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    />


                <TextView
                    android:id="@+id/btn_add"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_top_bar"
                    android:background="@color/material_white_1000"
                    android:onClick="@{additem::onSubmit}"
                    android:text="@string/button_confirm"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>


    </RelativeLayout>
</layout>